config("includes") {
  include_dirs = [ "." ]
}

source_set("nanopb") {
  public_configs = [ ":includes" ]
  public = [
    "pb.h",
    "pb_common.h",
    "pb_decode.h",
    "pb_encode.h",
  ]
  sources = [
              "pb_common.c",
              "pb_decode.c",
              "pb_encode.c",
            ] + public
}
